[package]
name = "mccloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
clap = {version = "*", features = ["derive"]}
env_logger = "*"
hex = "*"
log = "*"
openssl = {version = "*"}
rmp-serde = "*"
serde = {version = "*", features = ["derive"]}
serde_bytes = "*"
tokio = {version = "*", features = ["full"]}
toml = "*"