[package]
name = "mccloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
codegen-units = 1
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
aes = "*"
anyhow = "*"
cbc = {version = "0.1.2", features = ["alloc"]}
clap = {version = "*", features = ["derive"]}
env_logger = "*"
hex = "*"
k256 = {version = "*", features = ["ecdh"]}
log = "*"
rand = "*"
rmp-serde = "*"
serde = {version = "*", features = ["derive"]}
serde_bytes = "*"
sha2 = "*"
tokio = {version = "*", features = ["full"]}
toml = "*"